syntax = "proto3";

package ai.pipestream.opensearch.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_outer_classname = "OpenSearchDocumentProto";
option java_package = "ai.pipestream.opensearch.v1";

// Represents the canonical structure of a document to be indexed in OpenSearch.
// This message is the single source of truth for our document model, combining
// system-managed base fields with a flexible container for arbitrary user data.
message OpenSearchDocument {
  // --- Core Identity & System Fields ---
  // Original document identifier from source system
  string original_doc_id = 1;
  // Document type classification
  string doc_type = 2;
  // User or system that created this document
  string created_by = 3;
  // When the document was first indexed
  google.protobuf.Timestamp created_at = 4;
  // When the document was last modified
  google.protobuf.Timestamp last_modified_at = 5;

  // --- Fields Derived from PipeDoc Schema ---
  // Original source URI where document was retrieved
  optional string source_uri = 6;
  // MIME type of the source document
  optional string source_mime_type = 7;
  // Document title or headline
  optional string title = 8;
  // Main document content/body text
  optional string body = 9;
  // Tags/keywords for categorization and search
  repeated string tags = 10;
  // Revision identifier for version tracking
  optional string revision_id = 11;

  // --- The Nested Embeddings ---
  // List of all vector embeddings (chunked and non-chunked) for this document
  // Mapped to a 'nested' field in OpenSearch for vector search
  repeated OpenSearchEmbedding embeddings = 12;

  // --- User-Defined Flexible Data ---
  // Flexible JSON container for arbitrary user-defined fields
  // not part of the core PipeDoc schema
  google.protobuf.Struct custom_fields = 13;
}

// The canonical representation of a single vector embedding and its associated metadata.
// This is the object that gets stored in the 'nested' field in OpenSearch.
message OpenSearchEmbedding {
  // The vector embedding itself.
  repeated float vector = 1;

  // The original, unmodified source text that was used to generate this vector.
  string source_text = 2;

  // A list of additional, derived textual data related to the source_text.
  repeated string context_text = 3;

  // The unique identifier of the chunking strategy used.
  string chunk_config_id = 4;

  // The unique identifier of the embedding model used.
  string embedding_id = 5;

  // A flag to distinguish "primary" embeddings (from non-chunked fields like a title)
  // from "secondary" embeddings (from the many chunks of a body text).
  bool is_primary = 6;
}
